# agent-exercises

./: .gitignore  advisor.py  judge.py  openai_sdk_intro.py  pyproject.toml  sales_email.py  todo.py
data/: todo.json
